--- a/upload.html
+++ b/upload.html
@@ -338,11 +338,7 @@
 				data: param,
 				dataType: "JSON",
 			    success:function(data) {
-			    	if(data.error!="1"){
-			      		return resolve(data);
-			      	}else{
-			      		return reject(data);
-			      	}
+			    	return data;
 			    }
 		  	});
 		}
