--- a/upload.html
+++ b/upload.html
@@ -34,8 +34,8 @@
 </head>
 <body>
 	<ol id="filelist">
-		<li>Save As your .xls data to .csv file.</li>
-		<li>Select your CSV file.</li>
+		<li>Save As your .xls data to .csv file. For example, you can download <a href="Fulton Excel Input.xlsx" target="blank">this file</a>.</li>
+		<li>Select your CSV file. For example, you can download <a href="Fulton.csv" target="blank">this file</a>.</li>
 		<li>The script will be automate to scrape data by KEY from CSV file.</li>
 		<li>Please waiting when run scrape process.</li>
 	</ol>
