--- a/upload.html
+++ b/upload.html
@@ -33,6 +33,7 @@
 	</style>
 </head>
 <body>
+	<h1>Fulton Scraper</h1>
 	<ol id="filelist">
 		<li>Save As your .xls data to .csv file. For example, you can download <a href="Fulton Excel Input.xlsx" target="blank">this file</a>.</li>
 		<li>Select your CSV file. For example, you can download <a href="Fulton.csv" target="blank">this file</a>.</li>
@@ -43,6 +44,10 @@
 	<div id="container">
 	    <a id="pickfiles" href="javascript:;">[Select files]</a>
 	</div>
+	<h2>Changelog</h2>
+	<ul>
+		<li>Update 14 Nov 2015: fix read csv (update logic to read fixed csv file).</li>
+	</ul>
 	<div id="console"></div>
 	<script type="text/javascript">
 		// Initialize the widget when the DOM is ready
