add credit to developer

--- a/upload.html
+++ b/upload.html
@@ -49,6 +49,7 @@
 		<li>Update 14 Nov 2015: fix read csv (update logic to read fixed csv file).</li>
 	</ul>
 	<div id="console"></div>
+	<div id="footer">Develop by <a href="http://agus.pondokprogrammer.com" target="blank">Agus Nurwanto</a>.</div>
 	<script type="text/javascript">
 		// Initialize the widget when the DOM is ready
 		var uploader = new plupload.Uploader({
