--- a/upload.html
+++ b/upload.html
@@ -35,6 +35,7 @@
 <body>
 	<h1>Fulton Scraper</h1>
 	<ol id="filelist">
+		<li><a href="Project Description.txt" target="blank">Project Description</a>.</li>
 		<li>Save As your .xls data to .csv file. For example, you can download <a href="Fulton Excel Input.xlsx" target="blank">this file</a>.</li>
 		<li>Select your CSV file. For example, you can download <a href="Fulton.csv" target="blank">this file</a>.</li>
 		<li>The script will be automate to scrape data by KEY from CSV file.</li>
@@ -52,6 +53,13 @@
 			<ul>
 				<li>fix read csv (update logic to read fixed csv file).</li>
 				<li>change upload to onclick action.</li>
+			</ul>
+		</li>
+		<li>
+			Update 16 Nov 2015 : 
+			<ul>
+				<li>Fix Bedrooms Full Bath/Half Bath missing.</li>
+				<li>Add link to Project Description.</li>
 			</ul>
 		</li>
 	</ul>
@@ -222,8 +230,8 @@
 				data["Total Value"] = tableAssessment.find('tr').eq(2).find('td').eq(5).text().trim().replace(/\ /g,'');
 				data["YearBuilt"] = tableImprovement.find('tr').eq(2).find('td').eq(4).text().trim();
 				data["Square Feet"] = tableLand.find('tr').eq(2).find('td').eq(3).text().trim();
-				data["Bedrooms"] = tableImprovement.eq(5).find('tr').eq(4).find('td').eq(3).text().trim();
-				data["Full Bath/Half Bath"] = tableImprovement.eq(5).find('tr').eq(4).find('td').eq(4).text().trim();
+				data["Bedrooms"] = tableImprovement.find('tr').eq(4).find('td').eq(3).text().trim();
+				data["Full Bath/Half Bath"] = tableImprovement.find('tr').eq(4).find('td').eq(4).text().trim();
 				data["Owner Name"] = tableParcel.find('tr').eq(1).find('td').eq(1).text().trim();
 				data["Mailing Address"] = tableParcel.find('tr').eq(2).find('td').eq(1).text().trim()
 					+' | '+tableParcel.find('tr').eq(3).find('td').eq(1).text().trim();
