--- a/upload.html
+++ b/upload.html
@@ -75,6 +75,8 @@
 				<li>Add link to Project Description and demo page.</li>
 				<li>Allow user to upload CSV file.</li>
 				<li>Resolve bug (The scraper seems to be scraping each parcel twice. When I open up the excel sheet, every parcel is listed twice. Each parcel only needs to be listed once.)</li>
+				<li>Add Fulto Page HTML, Fulton Taxes PDF and Fulton Waste PDF.</li>
+				<li>Add optional scrape with random proxy.</li>
 			</ul>
 		</li>
 	</ul>
