--- a/upload.html
+++ b/upload.html
@@ -40,6 +40,17 @@
 		    display: block;
 		    padding: 10px;
 		}
+		#table-data{
+			width: 7000px;
+			padding: 0px !important;
+		}
+		#table-data, th, td{
+			border: 1px solid;
+			padding: 5px 10px;
+		}
+		#table-data td{
+			vertical-align: top;
+		}
 	</style>
 </head>
 <body>
@@ -77,11 +88,13 @@
 				<li>Resolve bug (The scraper seems to be scraping each parcel twice. When I open up the excel sheet, every parcel is listed twice. Each parcel only needs to be listed once.)</li>
 				<li>Add Fulto Page HTML, Fulton Taxes PDF and Fulton Waste PDF.</li>
 				<li>Add optional scrape with random proxy.</li>
+				<li>Scrape the bill amounts for each year on the Property tax bill and add to the excel sheet.</li>
 			</ul>
 		</li>
 	</ul>
 	<div id="console"></div>
 	<div id="footer">Develop by <a href="http://agus.pondokprogrammer.com" target="blank">Agus Nurwanto</a>.</div>
+	<div id="currentData"></div>
 	<script type="text/javascript">
 		window.allData = {};
 		allData.fultonPage = {};
@@ -155,7 +168,7 @@
 		}
 
 		function startScrape(){
-			$('#console').html('<div class="title">Total key is: '+allKey.length+' <br>Start to Scrape.<br>Please Waiting!</div><div id="data"><table><thead></thead><tbody></tbody></table></div>');
+			$('#console').html('<div class="title">Total key is: '+allKey.length+' <br>Start to Scrape.<br>Please Waiting!</div><div id="data"><table id="table-data"><thead></thead><tbody></tbody></table></div>');
 			var i = j = 0;
 			allKey.reduce(function(sequence, key) {
 			  	return sequence.then(function() {
@@ -300,8 +313,9 @@
 		}
 
 		function parsingDataTaxes(html){
+			$('#currentData').html(html);
 			return new Promise(function(resolve, reject){
-				var trDetail = $('.webGridDetail tbody tr');
+				var trDetail = $('#currentData .webGridDetail tbody tr');
 				var data = {};
 				var keys = ["Principal Amount", "Interest", "Penalties/Fees", "Paid", "Total"];
 				trDetail.each(function(i, body){
@@ -324,8 +338,9 @@
 		}
 
 		function parsingDataWaste(html){
+			$('#currentData').html(html);
 			return new Promise(function(resolve, reject){
-				var trDetail = $('.webGridDetailSW tbody tr');
+				var trDetail = $('#currentData .webGridDetailSW tbody tr');
 				var data = {};
 				var keys = ["Original Amount", "Exemption", "Interest", "Penalties/Fees", "Paid", "Amount Due", "Last Payment"];
 				trDetail.each(function(i, body){
@@ -359,13 +374,9 @@
 				for(var i in allData.fultonPage[j]){ 
 					header += "<th>"+i+"</th>";
 				};
-				for(var i in allData.fultonTaxes[j]){ 
-					header += "<th>"+i+"</th>";
-				};
-				for(var i in allData.fultonWaste[j]){ 
-					header += "<th>"+i+"</th>";
-				};
-				header += "<th>Url PDF</th>";
+				header += "<th style='width:200px;'>Fulton Taxes</th>";
+				header += "<th style='width:200px;'>Fulton Waste</th>";
+				header += "<th style='width:600px;'>Url PDF</th>";
 				header += "</tr>";
 				$('#data table thead').html(header);
 			}
@@ -374,36 +385,37 @@
 			for(var i in allData.fultonPage[j]){ 
 				content += "<td>"+allData.fultonPage[j][i]+"</td>";
 			};
+			content += "<td>";
 			for(var i in allData.fultonTaxes[j]){ 
-				content += "<td>"+allData.fultonTaxes[j][i]+"</td>";
+				content += i+" => "+allData.fultonTaxes[j][i]+"<br>";
 			};
+			content += "</td>";
+			content += "<td>";
 			for(var i in allData.fultonWaste[j]){ 
-				content += "<td>"+allData.fultonWaste[j][i]+"</td>";
+				content += i+" => "+allData.fultonWaste[j][i]+"<br>";
 			};
+			content += "</td>";
 			content += "<td>"+allData.fultonPdf[j]+"</td>";
 			content += "</tr>";
 			$('#data table tbody').append(content);
 		}
 
 		function addDataToSession(j, firstScrape){
-			var param = "setSession=true&key="+j;
-			for(var i in allData.fultonPage[j]){ 
-				param += "&"+encodeURIComponent(i)+"="+encodeURIComponent(allData.fultonPage[j][i]);
-			};
-			for(var i in allData.fultonTaxes[j]){ 
-				param += "&"+encodeURIComponent(i)+"="+encodeURIComponent(allData.fultonTaxes[j][i]);
-			};
-			for(var i in allData.fultonWaste[j]){ 
-				param += "&"+encodeURIComponent(i)+"="+encodeURIComponent(allData.fultonWaste[j][i]);
-			};
-			param += "&"+encodeURIComponent("Url PDF")+"="+encodeURIComponent(allData.fultonPdf[j]);
+			var param = {};
+			param.fultonPage = allData.fultonPage[j];
+			param.fultonTaxes = allData.fultonTaxes[j];
+			param.fultonWaste = allData.fultonWaste[j];
+			param.fultonPdf = allData.fultonPdf[j];
+			param.setSession = true;
+			param.key = j;
 			if(firstScrape){
-				param += "&firstScrape=true";
+				param.firstScrape = true;
 			}
 			$.ajax({
 			    url:"excel.php",  
 			    type: "POST",
-				data: param,
+			    contentType: 'application/json',
+				data: JSON.stringify(param),
 				dataType: "JSON",
 			    success:function(data) {
 			    	return data;
