add video how to use fulton scrape

--- a/upload.html
+++ b/upload.html
@@ -69,14 +69,20 @@
 	    <Input type="checkbox" id="random-proxy"> <label for="random-proxy">Random Proxy</label>
 	    <br>
 	    <a id="readCsv" onclick="readCsv();" href="javascript:;" style="display:none;">[Start Fulton Scrape]</a>
+		<br>
+		<h2>How to Use Fulton Scrape</h2>
+		<center>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/6QKhtvltSdQ" frameborder="0" allowfullscreen></iframe>
+		</center>
+		<br>
 	</div>
 	<h2>Changelog</h2>
 	<ul>
 		<li>
 			Update 14 Nov 2015 : 
 			<ul>
-				<li>fix read csv (update logic to read fixed csv file).</li>
-				<li>change upload to onclick action.</li>
+				<li>Fix read csv (update logic to read fixed csv file).</li>
+				<li>Change upload to onclick action.</li>
 			</ul>
 		</li>
 		<li>
@@ -89,6 +95,12 @@
 				<li>Add Fulto Page HTML, Fulton Taxes PDF and Fulton Waste PDF.</li>
 				<li>Add optional scrape with random proxy.</li>
 				<li>Scrape the bill amounts for each year on the Property tax bill and add to the excel sheet.</li>
+			</ul>
+		</li>
+		<li>
+			Update 17 Nov 2015 : 
+			<ul>
+				<li>Insert How to Use Fulton Scrape.</li>
 			</ul>
 		</li>
 	</ul>
