--- a/upload.html
+++ b/upload.html
@@ -59,6 +59,7 @@
 		<li><a href="Project Description.txt" target="blank">Project Description</a>.</li>
 		<li><a href="https://fultonscraper.herokuapp.com/" target="blank">Demo Fulton Scraper</a>.</li>
 		<li>Save As your .xls data to .csv file. For example, you can download <a href="Fulton Excel Input.xlsx" target="blank">this file</a>.</li>
+		<li>The key must be in the format of the <b>column number 2.</b></li>
 		<li>Select your CSV file. For example, you can download <a href="Fulton.csv" target="blank">this file</a>.</li>
 		<li>The script will be automate to scrape data by KEY from CSV file.</li>
 		<li>Please waiting when run scrape process.</li>
@@ -101,6 +102,7 @@
 			Update 17 Nov 2015 : 
 			<ul>
 				<li>Insert How to Use Fulton Scrape.</li>
+				<li>Update max file size limit to 100mb.</li>
 			</ul>
 		</li>
 	</ul>
