add video setting CSV

--- a/upload.html
+++ b/upload.html
@@ -75,6 +75,10 @@
 		<center>
 			<iframe width="560" height="315" src="https://www.youtube.com/embed/6QKhtvltSdQ" frameborder="0" allowfullscreen></iframe>
 		</center>
+		<h2>Setting CSV file for fulton scraper </h2>
+		<center>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/GkRzwygQg-M" frameborder="0" allowfullscreen></iframe>
+		</center>
 		<br>
 	</div>
 	<h2>Changelog</h2>
@@ -103,6 +107,13 @@
 			<ul>
 				<li>Insert How to Use Fulton Scrape.</li>
 				<li>Update max file size limit to 100mb.</li>
+			</ul>
+		</li>
+		<li>
+			Update 18 Nov 2015 : 
+			<ul>
+				<li>Add video setting excel file.</li>
+				<li>Change upload data ot <a href="https://fultonfile-agusnurwanto.rhcloud.com/tmp">fultonfile-agusnurwanto.rhcloud.com</a>.</li>
 			</ul>
 		</li>
 	</ul>
@@ -377,8 +388,7 @@
 		}
 
 		function finishScrape(){
-			$('#console .title').html('Process 100%. Finish :)');
-			setTimeout(function(){ $('#console').hide(); }, 5000);
+			$('#console .title').html('Process 100%. Finish :)<br><a href="excel.php" target="blank" id="excel">Show on excel!</a>');
 		}
 
 		function addDataToTable(j, cekHeader){
