--- a/upload.html
+++ b/upload.html
@@ -75,6 +75,7 @@
 		<center>
 			<iframe width="560" height="315" src="https://www.youtube.com/embed/6QKhtvltSdQ" frameborder="0" allowfullscreen></iframe>
 		</center>
+		<br>
 		<h2>Setting CSV file for fulton scraper </h2>
 		<center>
 			<iframe width="560" height="315" src="https://www.youtube.com/embed/GkRzwygQg-M" frameborder="0" allowfullscreen></iframe>
@@ -113,7 +114,7 @@
 			Update 18 Nov 2015 : 
 			<ul>
 				<li>Add video setting excel file.</li>
-				<li>Change upload data ot <a href="https://fultonfile-agusnurwanto.rhcloud.com/tmp">fultonfile-agusnurwanto.rhcloud.com</a>.</li>
+				<li>Change upload data on <a href="https://fultonfile-agusnurwanto.rhcloud.com/tmp">fultonfile-agusnurwanto.rhcloud.com</a>.</li>
 			</ul>
 		</li>
 	</ul>
