--- a/upload.html
+++ b/upload.html
@@ -139,6 +139,12 @@
 				<li>Filter Fulton ID error.</li>
 			</ul>
 		</li>
+		<li>
+			Update 22 Nov 2015 : 
+			<ul>
+				<li>Each bill amount in its own separate column.</li>
+			</ul>
+		</li>
 	</ul>
 	<div id="console"></div>
 	<div id="footer">Develop by <a href="http://agus.pondokprogrammer.com" target="blank">Agus Nurwanto</a>.</div>
