change exel to one row

--- a/upload.html
+++ b/upload.html
@@ -143,6 +143,7 @@
 			Update 22 Nov 2015 : 
 			<ul>
 				<li>Each bill amount in its own separate column.</li>
+				<li>Change list of data to one row.</li>
 			</ul>
 		</li>
 	</ul>
